--- a/output/css/tim.css
+++ b/output/css/tim.css
@@ -323,6 +323,12 @@ blockquote,.lead {
 #menu #menuholder nav ul li:nth-child(7) {
 	transition: transform 0.6s ease 0.30s, opacity 0.6s ease 0.30s;
 }
+#menu #menuholder nav ul li:nth-child(8) {
+	transition: transform 0.6s ease 0.35s, opacity 0.6s ease 0.35s;
+}
+#menu #menuholder nav ul li:nth-child(9) {
+	transition: transform 0.6s ease 0.40s, opacity 0.6s ease 0.40s;
+}
 #menu #menuholder nav ul li a {
 	position: absolute;
 	margin-left: 32px;
@@ -402,6 +408,12 @@ blockquote,.lead {
 }
 #menu:hover #menuholder nav ul li:nth-child(7) {
 	transform: rotateZ(80deg) rotateX(0deg) rotateY(0deg);
+}
+#menu:hover #menuholder nav ul li:nth-child(8) {
+	transform: rotateZ(96deg) rotateX(0deg) rotateY(0deg);
+}
+#menu:hover #menuholder nav ul li:nth-child(9) {
+	transform: rotateZ(112deg) rotateX(0deg) rotateY(0deg);
 }
 #menuholder nav ul li a:hover  {
 	color: #336E7B;
