--- a/output/css/tim.css
+++ b/output/css/tim.css
@@ -329,6 +329,9 @@ blockquote,.lead {
 #menu #menuholder nav ul li:nth-child(9) {
 	transition: transform 0.6s ease 0.40s, opacity 0.6s ease 0.40s;
 }
+#menu #menuholder nav ul li:nth-child(10) {
+	transition: transform 0.6s ease 0.45s, opacity 0.6s ease 0.45s;
+}
 #menu #menuholder nav ul li a {
 	position: absolute;
 	margin-left: 32px;
@@ -392,27 +395,30 @@ blockquote,.lead {
 	transform: rotateX(0deg);
 }
 #menu:hover #menuholder nav ul li:nth-child(2) {
-	transform: rotateZ(0deg) rotateX(0deg) rotateY(0deg);
+	transform: rotateZ(-16deg) rotateX(0deg) rotateY(0deg);
 }
 #menu:hover #menuholder nav ul li:nth-child(3) {
-	transform: rotateZ(16deg) rotateX(0deg) rotateY(0deg);
+	transform: rotateZ(0deg) rotateX(0deg) rotateY(0deg);
 }
 #menu:hover #menuholder nav ul li:nth-child(4) {
-	transform: rotateZ(32deg) rotateX(0deg) rotateY(0deg);
+	transform: rotateZ(16deg) rotateX(0deg) rotateY(0deg);
 }
 #menu:hover #menuholder nav ul li:nth-child(5) {
-	transform: rotateZ(48deg) rotateX(0deg) rotateY(0deg);
+	transform: rotateZ(32deg) rotateX(0deg) rotateY(0deg);
 }
 #menu:hover #menuholder nav ul li:nth-child(6) {
-	transform: rotateZ(64deg) rotateX(0deg) rotateY(0deg);
+	transform: rotateZ(48deg) rotateX(0deg) rotateY(0deg);
 }
 #menu:hover #menuholder nav ul li:nth-child(7) {
-	transform: rotateZ(80deg) rotateX(0deg) rotateY(0deg);
+	transform: rotateZ(64deg) rotateX(0deg) rotateY(0deg);
 }
 #menu:hover #menuholder nav ul li:nth-child(8) {
-	transform: rotateZ(96deg) rotateX(0deg) rotateY(0deg);
+	transform: rotateZ(80deg) rotateX(0deg) rotateY(0deg);
 }
 #menu:hover #menuholder nav ul li:nth-child(9) {
+	transform: rotateZ(96deg) rotateX(0deg) rotateY(0deg);
+}
+#menu:hover #menuholder nav ul li:nth-child(10) {
 	transform: rotateZ(112deg) rotateX(0deg) rotateY(0deg);
 }
 #menuholder nav ul li a:hover  {
