--- a/source/templates/projects.html
+++ b/source/templates/projects.html
@@ -6,8 +6,18 @@
                 <hr>
             </div>
         </div>
+        <!--
         <div class="row">
             <div class="col-sm-8 col-sm-offset-2">
+                <h2>Stats</h2>
+                <div id="project-stats">
+                </div>
+            </div>
+        </div>
+        -->
+        <div class="row">
+            <div class="col-sm-8 col-sm-offset-2">
+                <h2>Repositories</h2>
                 <ul id="project-list" class="list-group">
                 </ul>
             </div>
