--- a/source/templates/colophon.html
+++ b/source/templates/colophon.html
@@ -25,9 +25,11 @@
 						 still with an interactive or nested experience, seems very elegant. Being interested in Machine Learning, the idea of
 						 a semantic web is wonderful; therefore, the <samp><a href="#!/resume">#!/resume</a></samp> and <samp><a href="#!/contact">#!/contact</a></samp>
 						 <em>pages</em> use <a href="http://microformats.org/wiki/microformats2" target="_blank">microformat2</a> structured data.
-						 All hover events, less one, are implemented using <samp>CSS</samp> and not <samp>JavaScript</samp>.
+                         The <samp><a href="#!/projects">#!/projects</a></samp> <em>page</em> uses <code>ajax</code> calls to the <a href="https://developer.github.com/v3/">GitHub API</a> for gathering project data.
+                         All hover events and animations, less one, are implemented using <code>css</code> and <strong>not</strong> <code>JavaScript</code>.
+                        
 					</p>
-					<p> All <code>.html</code>, <code>.css</code> & <code>.js</code> is home grown except for <small>(credit where credit is due)</small> :</p>
+					<p> All <code>.html</code>, <code>.css</code> &amp; <code>.js</code> is home grown except for <small>(credit where credit is due)</small> :</p>
 					<ol>
 						<li>a customized <code><a href="http://getbootstrap.com/customize/?id=1e76d717b84935ce2665" target="_blank">bootstrap.css</a></code>
 							(<code>bootstrap.js</code> is <strong><em>not</em></strong> used)
@@ -38,9 +40,10 @@
 					</ol>
 					<p><small>Please <a href="#!/contact">contact</a> me if something is misrepresented.</small></p>
 					<h3>Tools</h3>
+					<hr>
 					<p class="tools">A couple of extremely sophisticated abacuses and a lot of tiny modifiable stone tablets.</p>
 					<blockquote class="blockquote-hover">
-						<p>The thing that hath been, it is that which shall be; and that which is done is that which shall be done: <strong>and there is no new thing under the sun.</strong></p>
+						<p>The thing that hath been, it is that which shall be; and that which is done is that which shall be done: <strong><u>and there is no new thing under the sun</u></strong>.</p>
 						<footer>
 							<a href="https://www.biblegateway.com/passage/?search=Ecclesiastes%201:9&version=KJV" target="_blank">
 								<cite>Ecclesiastes 1:9</cite>
@@ -132,7 +135,12 @@
 					</div>
 					<h4>Curiosities</h4>
 					<hr>
-					<p>The <a href="#!/monogram">monogram</a> was made with tightly placed <code>html</code>/<code>css</code>. An embedded <code>base64</code> image version for the R&eacute;sum&eacute; <em>page</em> was made with this really simple <a href="#!/base64imagepy">python script</a>.</p>
+                    <p>What's with the <code><abbr title="Uniform Resource Locator">url</abbr></code> &amp; name?</p>
+                    <ol>
+                        <li>consitent user name, nobody had clamied it on <em>any</em> service I needed,</li>
+                        <li>begin interested in language and information transfered via characters, vowels are somewhat unecessary to record, like the phoenician alphabet<a href="http://en.wikipedia.org/wiki/Phoenician_alphabet" target="_blank"><sup>W</sup></a> or any abjad<a href="http://en.wikipedia.org/wiki/Abjad" target="_blank"><sup>W</sup></a>.</li>
+                    </ol>
+					<p>The <a href="#!/monogram">monogram</a> was made with tightly placed <code>html</code>/<code>css</code>. An embedded <code>base64</code> image version for the <samp><a href="#!/resume">#!/resume</a></samp> <em>page</em> was made with this really simple <a href="#!/base64imagepy">python script</a>.</p>
 					<p>The <em>planetary menu</em> is a nod to the wonder of astronomy and a, potentially humorous, commentary to the fact that by <em>navigating</em> my website, you are metaphorically <em>navigating</em> a world I created.</p>
 					<p>I find it interesting to use mathematical relationships to define numbers instead of arbitrary or aesthetic choice.  Often the mathematical becomes aesthetic. If an overall trend/equation is not used to set a group of numbers (as in the typography described above), or if only a single number is needed, I try to use something that first satisfies</p>
                     <p class="text-center">
