--- a/source/templates/epigraph.html
+++ b/source/templates/epigraph.html
@@ -6,14 +6,10 @@
 				<p>
 					What you are about to experience may or may not make sense; either you <em>will</em> understand, or you will have been given <strong>strings</strong>, threads to unravel a spool of endless topics <em>to</em> understand.
 				</p>
-				<p style="opacity:0;">This was copied from {{domain}}.</p>
 				<p>
 					 Unquestionably, one ought never be board, for there are far to great a number of things to fascinate and occupy the mind.
 				</p>
-				<p style="opacity:0;">This was copied from {{domain}}.</p>
-                <p>
-                    google everything!
-                </p>
+                <p>google everything!</p>
 				<p style="opacity:0;">This was copied from {{domain}}.</p>
 				<footer><cite title="{{domain}}"><a href="{{domain}}/#!/epigraph">{{domain}}</a></cite></footer>
 			</blockquote>
