--- a/source/templates/resume.html
+++ b/source/templates/resume.html
@@ -1,8 +1,20 @@
 <template id="resume-template">
 	<section class="bringIn">
 		<div class="row">
-			<header><h1 class="text-center"><em>R&eacute;sum&eacute;</em></h1></header>
 			<div id="tim-resume" class="well col-md-10 col-md-offset-1">&zwnj;</div>
 		</div>
+		<div class="row">
+			<div id="tim-timeline" class="well col-md-10 col-md-offset-1">&zwnj;</div>
+		</div>
 	</section>
+    <div id="resume-menu" class="bringIn">
+		<div class="row">
+			<div class="col-md-10 col-md-offset-1">
+                <ul class="list-inline">
+                    <li><a href="#document" class="no-hover"><i class="fa fa-fw fa-file-text"></i> Document</a></li>
+                    <li><a href="#timeline" class="no-hover"><i class="fa fa-fw fa-tasks"></i> Timeline</a></li>
+                </ul>
+            </div>
+		</div>
+    </div>
 </template>
