--- a/output/css/tim.css
+++ b/output/css/tim.css
@@ -20,11 +20,14 @@ html, body {
 main {
     position: relative;
 	transition: opacity 0.6s ease;
-	perspective: 2000px;
+	perspective: 1000px;
+    perspective-origin: top;
 }
 main.fill-container {
+	width: 100%;
 	min-height: 100%;
 	height: 100%;
+    height: auto;
 	padding: 0px 0px 0px;
 }
 
@@ -42,6 +45,8 @@ section {
 }
 main section {
 	position: relative;
+    top:0;
+	height: auto;
     z-index: 0;
 	transform: translateY(-10%) rotateY(90deg);
 }
@@ -628,6 +633,9 @@ blockquote,.lead {
 
 /* Home Page
 ----------------------------------------------------------------------------------------------------------------------------- */
+#home {
+	position: absolute;
+}
 #intro {
 	position: absolute;
 	top:50%;
@@ -669,6 +677,9 @@ blockquote,.lead {
 
 /* Epigraph Page
 ----------------------------------------------------------------------------------------------------------------------------- */
+#epigraph {
+	position: absolute;
+}
 #epigraph > div {
 	position: absolute;
 
@@ -711,9 +722,13 @@ blockquote,.lead {
 ----------------------------------------------------------------------------------------------------------------------------- */
 
 #resume {
+    
+/*
     position: fixed;
     overflow: scroll;
+*/
 }
+
 #resume-menu {
 	transition: all 1s ease;
 }
