--- a/source/assets/css/tim.css
+++ b/source/assets/css/tim.css
@@ -13,11 +13,6 @@ body {
 	min-height: 100%;
     height:auto;
 }
-/*
-html, body {
-    padding-top: 65px; 
-}
-*/
 main {
     position: relative;
 	transition: opacity 0.6s ease;
@@ -31,7 +26,6 @@ main.fill-container {
     height: auto;
 	padding: 0px 0px 0px;
 }
-
 section {
 	width: 100%;
 	height: 100%;
@@ -66,6 +60,38 @@ main:not(#page) > section > div {
 
 /* General Classes - basically bootstrap overrides for cases it doesn't cover
 ----------------------------------------------------------------------------------------------------------------------------- */
+/* this navbar does not collapse */
+.navbar {
+    background-color: rgba(27, 188, 155, 0.8);
+}
+.navbar-header {
+    float:left!important;
+    margin-right: 32px!important;
+    margin-left: 32px!important;
+}
+.navbar-brand {
+    margin-left:0px!important;
+}
+.navbar-nav.navbar-left {
+    float: left!important;
+    margin: 0;
+}
+.navbar-nav.navbar-right {
+    float: right!important;
+    margin: 0;
+}
+.navbar-nav>li {
+    float:left!important;
+}
+.navbar-nav>li>a {
+    padding: 21px 16px;
+/*
+    font-size: 19px;
+    line-height: 22px;
+*/
+    height: 64px;
+}
+
 .valign-top {
     display: inline-block;
     vertical-align: top;
@@ -722,47 +748,9 @@ blockquote,.lead {
 /* Resume Page
 ----------------------------------------------------------------------------------------------------------------------------- */
 
-#resume {
-    
-/*
-    position: fixed;
-    overflow: scroll;
-*/
-}
-
 #resume-menu {
+/*	transform: translateY(-64px)!important;*/
 	transition: all 1s ease;
-}
-#resume-menu ul {
-    padding: 8px 8px;
-    margin: 0px 64px;
-}
-
-#resume-menu .navbar {
-    background-color: rgba(27, 188, 155, 0.75);
-}
-#resume-menu .navbar-header {
-    float:left!important;
-    margin-right: 0!important;
-    margin-left: 0!important;
-}
-#resume-menu .navbar-brand {
-    margin-left:0px!important;
-}
-#resume-menu .navbar-nav.navbar-left {
-    float: left!important;
-    margin: 0;
-}
-#resume-menu .navbar-nav.navbar-right {
-    float: right!important;
-    margin: 0;
-}
-#resume-menu .navbar-nav>li {
-    float:left!important;
-}
-#resume-menu .navbar-nav>li>a {
-    padding-top: 12px!important;
-    padding-bottom: 12px!important;
 }
 
 #resume .p-rating[title*="0-5 rating :"]::after {
@@ -1471,7 +1459,6 @@ main section.bringIn {
 main section.bringOut {
 	animation: flipOut 512ms ease-out 1 both;
 }
-
 #resume-menu.bringIn {
 	animation: dropdown 512ms linear 1024ms 1 both;
 }
@@ -1488,9 +1475,9 @@ main section.bringOut {
 }
 
 @keyframes dropdown {
-	0%   {opacity:   0;transform: translateY(-64px);}
-	80%  {opacity:   1;transform: translateY(20px);}
-	100% {opacity:   1;transform: translateY(0px);}
+	0%   {opacity:   0; margin-top: -64px; }
+	80%  {opacity:   1; margin-top:  20px; }
+	100% {opacity:   1; margin-top:   0px; }
 }
 @keyframes flip {
 	0%   {transform: rotate(  0deg);}
