--- a/source/templates/resume.html
+++ b/source/templates/resume.html
@@ -7,14 +7,15 @@
             <div id="tim-timeline" class="well col-md-10 col-md-offset-1">&zwnj;</div>
         </div>
     </section>
-    <nav id="resume-menu" class="bringIn navbar navbar-default navbar-fixed-top">
-        <div class="container-fluid">
-            <div class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li><a href="#document" class="no-hover"><i class="fa fa-fw fa-file-text"></i> Document</a></li>
-                    <li><a href="#timeline" class="no-hover"><i class="fa fa-fw fa-tasks"></i> Timeline</a></li>
+    <nav id="resume-menu" class="navbar navbar-default navbar-fixed-top bringIn">
+        <div class="container">
+            <div class="navbar-header">
+                <span class="navbar-brand">R&eacute;sum&eacute;:</span>
+                <ul class="nav navbar-nav navbar-left">
+                    <li><a href="#document" class="no-hover"><i class="fa fa-fw fa-file-text"></i> document</a></li>
+                    <li><a href="#timeline" class="no-hover"><i class="fa fa-fw fa-tasks"></i> timeline</a></li>
                 </ul>
             </div>
         </div>
-    </nav>
+    </nav>    
 </template>
