--- a/source/templates/colophon.html
+++ b/source/templates/colophon.html
@@ -20,15 +20,15 @@
 					<h3>Design</h3>
 					<hr>
 					<p>
-						A look at the source of this site will identify a static one-page design with <code>&lt;template&gt;</code>s and a simple
+						A look at the <span class="code-font">source</span> of this site will identify a static one-page design with <code>&lt;template&gt;</code>s and a simple
 						 <code>hashchange</code> router. Downloading a whole website from one <code><abbr title="Uniform Resource Locator">url</abbr></code>,
 						 still with an interactive or nested experience, seems very elegant. Being interested in Machine Learning, the idea of
 						 a semantic web is wonderful; therefore, the <samp><a href="#!/resume">#!/resume</a></samp> and <samp><a href="#!/contact">#!/contact</a></samp>
 						 <em>pages</em> use <a href="http://microformats.org/wiki/microformats2" target="_blank">microformat2</a> structured data.
                          The <samp><a href="#!/projects">#!/projects</a></samp> <em>page</em> uses <code>ajax</code> calls to the <a href="https://developer.github.com/v3/">GitHub API</a> for gathering project data.
                          All hover events and animations, less one, are implemented using <code>css</code> and <strong>not</strong> <code>JavaScript</code>.
-                        
 					</p>
+                    <p>This site was <em>stitched</em> together with my own static site generator, <a href="http://tmthydvnprt.com/quilt/">quilt</a>.</p>
 					<p> All <code>.html</code>, <code>.css</code> &amp; <code>.js</code> is home grown except for <small>(credit where credit is due)</small> :</p>
 					<ol>
 						<li>a customized <code><a href="http://getbootstrap.com/customize/?id=1e76d717b84935ce2665" target="_blank">bootstrap.css</a></code>
