--- a/source/templates/colophon.html
+++ b/source/templates/colophon.html
@@ -57,7 +57,7 @@
 						 uses <a class="typo" href="https://www.google.com/fonts/specimen/Ubuntu" target="_blank">Ubuntu</a> for prose & headings,
 						 <a class="typo code-font" href="https://www.google.com/fonts/specimen/Ubuntu+Mono" target="_blank">Ubuntu Mono</a> for code,
 						 <a class="typo wiki-font" href="https://www.google.com/fonts/specimen/Sorts+Mill+Goudy" target="_blank">Sorts Mill Goudy</a> for
-						 wikipedia<a href="http://en.wikipedia.org/" target="_blank">W</a> links, &
+						 wikipedia <a href="http://en.wikipedia.org/" target="_blank">W</a> links, &
 						 <a class="typo logo-font" href="https://www.google.com/fonts/specimen/Poiret+One" target="_blank">Poiret One</a> f
 						 or the <abbr title="Timothy Michael Davenport">tmd</abbr> monogram, all served via google webfonts.
 					</p>
@@ -137,8 +137,8 @@
 					<hr>
                     <p>What's with the <code><abbr title="Uniform Resource Locator">url</abbr></code> &amp; name?</p>
                     <ol>
-                        <li>consitent user name, nobody had clamied it on <em>any</em> service I needed,</li>
-                        <li>begin interested in language and information transfered via characters, vowels are somewhat unecessary to record, like the phoenician alphabet<a href="http://en.wikipedia.org/wiki/Phoenician_alphabet" target="_blank"><sup>W</sup></a> or any abjad<a href="http://en.wikipedia.org/wiki/Abjad" target="_blank"><sup>W</sup></a>.</li>
+                        <li>consistent user name, nobody had claimed it on <em>any</em> service I needed (\o/),</li>
+                        <li>begin interested in language and information transferred via characters, vowels are somewhat unnecessary to record, like the phoenician alphabet <a href="http://en.wikipedia.org/wiki/Phoenician_alphabet" target="_blank"><sup>W</sup></a> or any abjad <a href="http://en.wikipedia.org/wiki/Abjad" target="_blank"><sup>W</sup></a>.</li>
                     </ol>
 					<p>The <a href="#!/monogram">monogram</a> was made with tightly placed <code>html</code>/<code>css</code>. An embedded <code>base64</code> image version for the <samp><a href="#!/resume">#!/resume</a></samp> <em>page</em> was made with this really simple <a href="#!/base64imagepy">python script</a>.</p>
 					<p>The <em>planetary menu</em> is a nod to the wonder of astronomy and a, potentially humorous, commentary to the fact that by <em>navigating</em> my website, you are metaphorically <em>navigating</em> a world I created.</p>
@@ -159,13 +159,13 @@
 						There is something enjoyable about hovering over text and seeing a change, therefore, most
 						 <code>&lt;a&gt;</code> tags display their <code>href</code> attribute to show where the link goes,
 						 <code>&lt;abbr&gt;</code> tags display their <code>title</code> attribute to explain the abbreviation and
-						 <code>&lt;time&gt;</code> tags display their <code>datetime</code> attribute to show an ISO8601<a href="http://en.wikipedia.org/wiki/ISO_8601" target="_blank"><sup>W</sup></a> timestamp or duration.
+						 <code>&lt;time&gt;</code> tags display their <code>datetime</code> attribute to show an ISO8601 <a href="http://en.wikipedia.org/wiki/ISO_8601" target="_blank"><sup>W</sup></a> timestamp or duration.
 					</p>
 					<p>There are other hidden hover events throughout this <em>page</em> and the rest of the site!</p>
+                    <div class="row"><p class="geometers">&Alpha;&Gamma;&Epsilon;&Omega;&Mu;&Epsilon;&Tau;&Rho;&Eta;&Tau;&Omicron;&Sigma; &Mu;&Eta;&Delta;&Epsilon;&Iota;&Sigma; &Epsilon;&Iota;&Sigma;&Iota;&Tau;&Omega;</p></div>
 				</div>
 			</div>
 		</div>
-		<div class="row"><h1 style="opacity:0;">I'm flattered you copy & pasted something from my website!</h1></div>
 		<div class="row">
 			<div class="col-sm-12">
 				<div class="logowrapper">
