handle github api failure

--- a/output/css/tim.css
+++ b/output/css/tim.css
@@ -840,6 +840,13 @@ blockquote,.lead {
 	}
 }
 
+/* Projects Page
+----------------------------------------------------------------------------------------------------------------------------- */
+@media (min-width: 768px) {
+	#projects {
+		padding-top: 0px;
+	}
+}
 /* Ruminations Page
 ----------------------------------------------------------------------------------------------------------------------------- */
 @media (min-width: 768px) {
