--- a/source/templates/projects.html
+++ b/source/templates/projects.html
@@ -19,7 +19,7 @@
             <div class="col-sm-8 col-sm-offset-2">
                 <h2>Repositories</h2>
                 <ul id="project-list" class="list-group">
-                    <h1 class="text-center">... gathering data ...</h1>
+                    <li class="list-group-item"><h1 class="text-center">...gathering data...</h1></li>
                 </ul>
             </div>
         </div>
