--- a/source/templates/monogram.html
+++ b/source/templates/monogram.html
@@ -15,6 +15,7 @@
 					<span class="t logo-letter">t</span>
 				</div>
 			</div>
+            <h1 class="logo-font">Timothy Michael Davenport</h1>
 		</div>
 	</section>
 </template>
