--- a/source/templates/colophon.html
+++ b/source/templates/colophon.html
@@ -16,11 +16,12 @@
 				<div>
 					<header><h1 class="text-center"><em>Colophon</em> <small>finishing touch</small></h1></header>
 					<p class="lead text-center">
-                        Coded in <time datetime="2015">Two Thousand Fifteen</time> in the southern regions of California.<br> <small>A place for the internet-facing extension of my self to reside.</small></p>
+                        Coded throughout <time datetime="2015">Two Thousand Fifteen</time><br>in the southern regions of California.<br> <small>A place for the internet-facing extension of my self to reside.</small></p>
 					<h3>Design</h3>
 					<hr>
 					<p>
-						A look at the <span class="code-font">source</span> of this site will identify a static one-page design with <code>&lt;template&gt;</code>s and a simple
+						The site's strucutre is based loosely on a book (epigraph, fliping animation, colophon, <abbr title="et cetera 'and so forth'">etc.</abbr>).
+                        A look at the <span class="code-font">source</span> of this site will identify a static one-page design with <code>&lt;template&gt;</code>s and a simple
 						 <code>hashchange</code> router. Downloading a whole website from one <code><abbr title="Uniform Resource Locator">url</abbr></code>,
 						 still with an interactive or nested experience, seems very elegant. Being interested in Machine Learning, the idea of
 						 a semantic web is wonderful; therefore, the <samp><a href="#!/resume">#!/resume</a></samp> and <samp><a href="#!/contact">#!/contact</a></samp>
