--- a/source/templates/epigraph.html
+++ b/source/templates/epigraph.html
@@ -1,13 +1,13 @@
 <template id="epigraph-template">
 	<section class="bringIn">
         <div>
-            <header><h1><em>Epigraph</em></h1></header>
+            <header>
+                <h1><em>Epigraph <small>/ Epigram</small></em></h1>
+                <h3><em><small>(I'd find it to be a nice epitaph too)</small></em></h3>
+            </header>
             <hr>
             <blockquote>
-                <p>
-                     Unquestionably, one ought never be bored, for there are far to great a number of things to fascinate and occupy the mind.
-                </p>
-                <p style="opacity:0;">This was copied from {{domain}}.</p>
+                <p>Unquestionably, one ought never be bored, for there are far to great a number of things to fascinate and occupy the mind.<span style="opacity:0;">This was copied from {{domain}}.</span></p>
                 <footer><cite title="{{domain}}"><a href="{{domain}}/#!/epigraph">{{domain}}</a></cite></footer>
             </blockquote>
             <p class="geometers">&Alpha;&Gamma;&Epsilon;&Omega;&Mu;&Epsilon;&Tau;&Rho;&Eta;&Tau;&Omicron;&Sigma; &Mu;&Eta;&Delta;&Epsilon;&Iota;&Sigma; &Epsilon;&Iota;&Sigma;&Iota;&Tau;&Omega;</p>
