--- a/source/templates/ruminations.html
+++ b/source/templates/ruminations.html
@@ -4,7 +4,7 @@
 			<div class="col-sm-12">
 				<div class="row">
 					<div class="col-sm-12">
-						<header><h1><em>Ruminations</em> <small>&mdash; the things that fascinate and occupy my mind</small></h1></header>
+						<header><h1><em>Ruminations</em> <small>&mdash; the things that fascinate and occupy <strong>my</strong> mind</small></h1></header>
 						<hr>
 					</div>
 				</div>
@@ -13,6 +13,14 @@
 						<h3><em>Computational</em><br><small>exploration for exploration's sake</small></h3>
 						<ul>
                             <li><code>Python</code> <small>(<abbr title="id est 'that is'">i.e.</abbr> executable pseudo-code!)</small></li>
+                            <li>Data Visualization
+                                <ul>
+                                    <li>Ploting, Graphing</li>
+                                    <li>Making complex data simple &amp; accessible</li>
+                                    <li>Data Munging <a href="http://en.wikipedia.org/wiki/Data_wrangling" target="_blank"><sup>W</sup></a></li>
+                                    <li>Map Reduce<a href="http://en.wikipedia.org/wiki/MapReduce" target="_blank"><sup>W</sup></a> type aggregating</li>
+                                </ul>
+                            </li>
 				            <li>
 								Machine Learning <a href="http://en.wikipedia.org/wiki/Machine_learning" target="_blank"><sup>W</sup></a> <small>( <strong>Not</strong> Artificial Intelligence <a href="http://en.wikipedia.org/wiki/Artificial_intelligence" target="_blank"><sup>W</sup></a>)</small>
                                 <ul>
@@ -29,15 +37,14 @@
                                     </li>
                                 </ul>
 							</li>
-							<li>Grapheme <a href="http://en.wikipedia.org/wiki/Grapheme" target="_blank"><sup>W</sup></a> Processing<br>
+							<li>Grapheme <a href="http://en.wikipedia.org/wiki/Grapheme" target="_blank"><sup>W</sup></a> Processing
                                 <small>(character-based)</small>
                                 <ul>
+                                    <li>Syntax and Grammers</li>
                                     <li>Regular Expressions <a href="http://en.wikipedia.org/wiki/Regular_Expressions" target="_blank"><sup>W</sup></a></li>
                                     <li>Lexers <a href="http://en.wikipedia.org/wiki/Lexical_analysis" target="_blank"><sup>W</sup></a> and Parsers <a href="http://en.wikipedia.org/wiki/Parsing" target="_blank"><sup>W</sup></a></li>
-                                    <li>Data Munging <a href="http://en.wikipedia.org/wiki/Data_wrangling" target="_blank"><sup>W</sup></a></li>
                                 </ul>
 							</li>
-							<li><em>&hellip;Always adding more&hellip;</em></li>
 						</ul>
 					</div>
 					<div class="col-sm-4">
@@ -60,11 +67,11 @@
 							<li>Time &amp; Space
                                 <ul>
                                     <li>Chronology <a href="http://en.wikipedia.org/wiki/Chronology" target="_blank"><sup>W</sup></a> &amp; Chronometry <a href="http://en.wikipedia.org/wiki/Chronometry" target="_blank"><sup>W</sup></a></li>
-                                    <li>Positioning (longitude/latitude)</li>
+                                    <li>Navigation <small>(<abbr title="videlicet 'namely'">viz.</abbr> longitude/latitude)</small></li>
                                 </ul>
                             </li>
 							<li>Astronomy</li>
-							<li>History</li>
+							<li>History <small>(in general, and of everything in these lists)</small></li>
 							<li>Language<br>
                                 <small>(<abbr title="videlicet 'namely'">viz.</abbr> clever prose with interesting structure and diction)</small>
                             </li>
